# CEGUI-Irrlicht

./: CMakeLists.txt  README.md  test.layout
cmake_modules/: FindCEGUI.cmake
src/: Main.cpp
